[project]
name = "slack.py"
authors = ["peco2282"]
description = "A Python wrapper for slack"
readme = "README.md"
requires-python = ">=3.9"
license = { "text" = "MIT" }

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinxcontrib_trio",
    "sphinx-copybutton==0.5.0"
]

[tool.setuptools]
packages = [
    "slack",
    "slack.types"
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
