[project]
name = "wsslack.py"
authors = ["peco2282"]
description = "A Python wrapper for slack"
readme = "README.md"
requires-python = ">=3.9"
license = { "text" = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinxcontrib_trio",
    "sphinx-copybutton==0.5.0"
]

[tool.setuptools]
packages = [
    "slack",
    "slack.types",
    "slack.commands",
    "slack.view"
]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.urls]
Source = "https://github.com/peco2282/slack.py"
Documentation = "https://slack-py.readthedocs.io/en/latest/"
